# fastviewer

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/parsers/: __init__.py  base.py  rutube.py  vk.py  youtube.py
src/ui/: __init__.py  cards.py  history_page.py  main_layout.py  router.py  search_page.py  settings_page.py
