[project]
name = "rutube-client"
version = "0.1.0"
description = "Десктопный клиент для поиска видео на Rutube"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flet>=0.21.0",
    "httpx>=0.26.0",
    "beautifulsoup4>=4.12.0",
    "youtube-search-python>=1.6.6",
    "aiohttp>=3.14.1",
]

[tool.uv]
managed = true
